# xythrion-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: bot.py  context.py
bot/extensions/core/: extensions.py
bot/extensions/games/minecraft/: modrinth.py
bot/extensions/games/minecraft/_models/modrinth/: project.py
bot/extensions/info/: dates.py  misc.py  ping.py
bot/extensions/mapping/: pins.py
bot/extensions/mapping/link_maps/: embed_link.py  redirect_link.py
bot/utils/: __init__.py  checks.py  converters.py  extensions.py  formatting.py  gradients.py
tests/: test_link_converter_utils.py  test_text_formatting.py
